welcome.lessons.welcome.array.basics.Array2.scala.code
override def run() {
	
	var T = new Array[Color](getMondeHauteur)
	val dec = litMessage().toInt
	for (i <- 0 to T.length - 2) {	
		T(i)=getCouleurSol()
		avance()
	}
	
	T(T.length-1)=getCouleurSol();
	recule(T.length-1)
	
	for(i<-2 to getMondeLargeur()) {
		gauche()
		avance()
		droite()
		var posCouleur = (j+dec)%T.length;
		for (j <- 0 to T.length - 2) {
			setCouleurBrosse(T(posCouleur))
			baisseBrosse()
			leveBrosse()
			avance()
		}		
		setCouleurBrosse((T(posCouleur-1)))
		baisseBrosse()
		leveBrosse()
		recule((T.length - 1))
	}
}
